# Mihashi

./: CLAUDE.md  LittleJoe_Spec.md  README.md
diary/: 2025-06-24.md  2025-06-26.md  2025-06-28.md
docs/: Autonomous_Development_System.md  LittleJoe_Development_Guide.md  Mihashi_Technical_Specification.md  UartMonitor_Development_Guide.md
firmware/littlejoe/: LittleJoe.ino  README.md
firmware/mihashi/: CMakeLists.txt  CMakeLists_dual.txt  CMakeLists_minimal.txt  CMakeLists_simple_device.txt  tusb_config_device.h  tusb_config_dual.h
firmware/mihashi/include/: mihashi_config.h  mihashi_dual_usb.h
firmware/mihashi/src/: main.c  main_device_simple.c  main_dual.c  main_minimal.c  main_simple_dual.c  midi_processor.c  usb_descriptors.c  usb_host.c  usb_host_simple.c
firmware/uartmonitor/: README.md  UartMonitor.ino
scripts/: upload_firmware.py
